--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 tiktoken==0.3.3
 cmake==4.0.2
+accelerate==0.28.0
+##transformers==4.45.2
 transformers==4.37.2
 transformers[sentencepiece]
 datasets
