--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 tiktoken==0.3.3
 cmake==4.0.2
-accelerate==0.28.0
+accelerate # ==0.28.0
 ##transformers==4.45.2
-transformers==4.37.2
+transformers #==4.37.2
 transformers[sentencepiece]
 datasets
 sacrebleu 
