--- a/config/config.yaml
+++ b/config/config.yaml
@@ -18,7 +18,8 @@ model_trainer:
 model_evaluation:
   root_dir: artifacts/model_evaluation
   data_path: artifacts/data_transformation/samsum_dataset
-  model_path: artifacts/model_trainer/pegasus-samsum-model
+  model_ckpt: google/pegasus-cnn_dailymail
+  model_path: artifacts/model_trainer/pegasus-samsum-model.pt
   tokenizer_path: artifacts/model_trainer/tokenizer
   metric_file_name: artifacts/model_evaluation/metrics.csv
   
